Closed Bug 306547 Opened 20 years ago Closed 20 years ago

path segments get lost with textPath, when using closePath (z)

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: holger, Assigned: tor)

Details

(Keywords: testcase)

Attachments

(2 files, 1 obsolete file)

when using closePath (z) the segment before the z is not included in the textPath but only if that segment is one of h,H,v,V,l,L. other path segment types work fine. steps to reproduce: 1. create a path with d="M0 0H100V100z" 2. use this path as a textPath there is no vertical text on the V segment. additionally to that closePath does not seem to work at all for textPath, should i file a seperate bug ?
Attached image testcase
this testcase shows two bugs, 1. z commands are ignored by the text on the path 2. the segment before the z command is also ignored, but only if its a h,H,v,V,l,L
Assignee: general → tor
Status: NEW → ASSIGNED
Attachment #195033 - Flags: review?(alex)
Attachment #195033 - Attachment is obsolete: true
Attachment #195033 - Flags: review?(alex)
Attached patch right version...Splinter Review
Attachment #195034 - Flags: review?(alex)
Attachment #195034 - Flags: review?(alex) → review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
verifying fix... now that this is fixed , too, textPath looks nice and stable. i would really like to see this in the trunk.
oh, branch !
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: