Bug 306547 - textPath not working on path using closepath command.  r=afri